<resources>
    <string name="app_name">Sociosoftware Assessment</string>

    // menu items
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_settings">Settings</string>
    <string name="full_name">Mark Abrasaldo</string>
    <string name="status">Applicant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello imageList fragment</string>
    <string name="title_activity_image_list">ImageListActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="history">History</string>

</resources>